--- a/AgriAnalyticoServer/appsettings.json
+++ b/AgriAnalyticoServer/appsettings.json
@@ -4,5 +4,9 @@
       "Default": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "sqlserver": "Server=(localdb)\\mssqllocaldb;Database=AnaliticoDB4;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+
   "AllowedHosts": "*"
 }
