--- a/AgriAnalyticoServer/AgriAnalyticoServer.csproj
+++ b/AgriAnalyticoServer/AgriAnalyticoServer.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+    <PackageReference Include="NLog" Version="5.0.0-beta11" />
   </ItemGroup>
 
 </Project>
